# dapper

./: Cargo.toml  README.md  dapper.py
.github/workflows/: ci.yml  python-publish.yml
dataset-generation/: Create_Linux_DB.py  Create_NUGET_DB.py  Create_PyPI_DB.py
docs/: basic_usage.md  conf.py  dataset_list.toml  getting_started.md  index.md  requirements.txt
python/: pyproject.toml
python/dapper_python/: normalize.py
python/dapper_python/databases/: linuxDB.py
python/tests/: test_normalize.py
src/: database.rs  dataset_info.rs  dataset_ops.rs  debian_packaging.rs  directory_info.rs  file_path_utils.rs  lib.rs  main.rs  parser.rs  walker.rs
src/dataset/: dataset_list.rs  dataset_ops.rs
src/parsing/: cpp_parser.rs  mod.rs  parser.rs  python_parser.rs
