[package]
name = "dapper"
version = "0.0.0-pre.1"
edition = "2021"
license = "MIT"
description = "Dependency Analysis Project - identifying dependencies in C/C++ code and packages on filesystems"
repository = "https://github.com/LLNL/dapper/"
categories = ["command-line-utilities", "development-tools"]
default-run = "dapper"

[build-dependencies]
cc="1.2"

[dependencies]
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1"
walkdir = "2.5.0"
rayon = "1.10.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
lazy_static = "1.5.0"
clap = { version = "4.5.30", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.20.3"
